--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,27 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
+        <!-- Primary Meta Tags -->
+
+        <meta name="title" content="Govindaraju C" />
+        <meta name="keywords" content="Angular Developer, Frontend engineer, Software engineer, frontend developer" />
+        <meta name="author" content="Govindaraju C" />
+        <meta name="description" content="Frontend Software Engineer with 3+ years of experience in latest Angular eco system" />
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://fir-c06b3.web.app/" />
+        <meta property="og:title" content="Govindaraju C" />
+        <meta property="og:description" content="Frontend Software Engineer with 3+ years of experience in latest Angular eco system" />
+        <meta property="og:image" content="src/assets/images/metaImage.PNG" />
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:url" content="https://fir-c06b3.web.app/" />
+        <meta property="twitter:title" content="Govindaraju C" />
+        <meta property="twitter:description" content="Frontend Software Engineer with 3+ years of experience in latest Angular eco system" />
+        <meta property="twitter:image" content="src/assets/images/metaImage.PNG" />
+
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-XKYSHZ3CTZ"></script>
         <script>
