Added meta tags image source

--- a/src/index.html
+++ b/src/index.html
@@ -19,14 +19,20 @@
         <meta property="og:url" content="https://fir-c06b3.web.app/" />
         <meta property="og:title" content="Govindaraju C" />
         <meta property="og:description" content="Frontend Software Engineer with 3+ years of experience in latest Angular eco system" />
-        <meta property="og:image" content="src/assets/images/metaImage.PNG" />
+        <meta
+            property="og:image"
+            content="https://firebasestorage.googleapis.com/v0/b/fir-c06b3.appspot.com/o/metaImage.PNG?alt=media&token=d3bda2b4-2080-464f-b36d-3375479a4b7f"
+        />
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image" />
         <meta property="twitter:url" content="https://fir-c06b3.web.app/" />
         <meta property="twitter:title" content="Govindaraju C" />
         <meta property="twitter:description" content="Frontend Software Engineer with 3+ years of experience in latest Angular eco system" />
-        <meta property="twitter:image" content="src/assets/images/metaImage.PNG" />
+        <meta
+            property="twitter:image"
+            content="https://firebasestorage.googleapis.com/v0/b/fir-c06b3.appspot.com/o/metaImage.PNG?alt=media&token=d3bda2b4-2080-464f-b36d-3375479a4b7f"
+        />
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-XKYSHZ3CTZ"></script>
