--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
         <base href="/" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="icon" type="image/x-icon" href="favicon.ico" />
+        <meta name="theme-color" content="#eceeef" />
 
         <!-- Primary Meta Tags -->
 
@@ -15,13 +16,13 @@
         <meta name="description" content="Frontend Software Engineer with 3+ years of experience in latest Angular eco system" />
 
         <!-- Open Graph / Facebook -->
-        <meta property="og:type" content="website" />
+        <meta property="og:type" content="Portfolio" />
         <meta property="og:url" content="https://fir-c06b3.web.app/" />
         <meta property="og:title" content="Govindaraju C" />
         <meta property="og:description" content="Frontend Software Engineer with 3+ years of experience in latest Angular eco system" />
         <meta
             property="og:image"
-            content="https://firebasestorage.googleapis.com/v0/b/fir-c06b3.appspot.com/o/metaImage.PNG?alt=media&token=d3bda2b4-2080-464f-b36d-3375479a4b7f"
+            content="https://firebasestorage.googleapis.com/v0/b/fir-c06b3.appspot.com/o/metaImage.JPG?alt=media&token=80e9c174-94c5-4c24-8d61-ef91388b9c50"
         />
 
         <!-- Twitter -->
@@ -31,7 +32,7 @@
         <meta property="twitter:description" content="Frontend Software Engineer with 3+ years of experience in latest Angular eco system" />
         <meta
             property="twitter:image"
-            content="https://firebasestorage.googleapis.com/v0/b/fir-c06b3.appspot.com/o/metaImage.PNG?alt=media&token=d3bda2b4-2080-464f-b36d-3375479a4b7f"
+            content="https://firebasestorage.googleapis.com/v0/b/fir-c06b3.appspot.com/o/metaImage.JPG?alt=media&token=80e9c174-94c5-4c24-8d61-ef91388b9c50"
         />
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
